<resources>
    <string name="app_name">friends journal</string>
    <string name="hint_word">Word...</string>
    <string name="hint_interval">Hours...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="channel_name">remember</string>
    <string name="channel_description">remember to user</string>
    <string name="button_best_friends">Best Friends</string>
    <string name="button_family">Family</string>
    <string name="button_good_friends">Good Friends</string>
    <string name="button_Acquaintances">Acquaintances</string>
    <string name="button_normal_friends">Normal Friends</string>
    <string name="unknown">Unknown</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="wechat">wechat</string>
    <string name="fb">FB</string>
    <string name="note">note</string>
    <string name="button_delete">Delete</string>

</resources>
