<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_Family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Family"
        android:text="@string/button_family"
        android:textColor="@color/buttonLabel"
        android:layout_margin="70dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_BestFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BestFriends"
        android:text="@string/button_best_friends"
        android:textColor="@color/buttonLabel"
        android:layout_margin="70dp"
        app:layout_constraintTop_toTopOf="@id/button_Family"
        />

    <Button
        android:id="@+id/button_GoodFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GoodFriends"
        android:text="@string/button_good_friends"
        android:textColor="@color/buttonLabel"
        android:layout_margin="70dp"
        app:layout_constraintTop_toTopOf="@id/button_BestFriends"
        />

    <Button
        android:id="@+id/button_NormalFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/NormalFriends"
        android:text="@string/button_normal_friends"
        android:textColor="@color/buttonLabel"
        android:layout_margin="70dp"
        app:layout_constraintTop_toTopOf="@id/button_GoodFriends"
        />

    <Button
        android:id="@+id/button_Acquaintances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Acquaintances"
        android:text="@string/button_Acquaintances"
        android:textColor="@color/buttonLabel"
        android:layout_margin="70dp"
        app:layout_constraintTop_toTopOf="@id/button_NormalFriends"
        />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/interval_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_interval"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="120dp"
        />

    <Button
        android:id="@+id/button_save_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="70dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>